# Isolated-Agents

./: .env.template  .gitignore  DELIVERY_SUMMARY.md  LICENSE  build_output.txt  final_build_output.txt  mkdocs.yml  patch.py  pylint_report.txt  pyproject.toml  scratch_test_mocks.py
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml
bob_sessions/: bob_task_may-15-2026_11-41-03-pm.md
docs/: ADAPTER_ARCHITECTURE.md  ADAPTER_PATTERN_SUMMARY.md  AGENT_COMMUNICATION.md  AGENT_RUNTIME.md  API_ADAPTER_SUPPORT.md  ARCHITECTURE_DIAGRAM.md  AUTOMATIC_INSTALLATION.md  COMPLETE_IMPLEMENTATION_GUIDE.md  COMPOSABILITY.md  CROSSPLATFORM_COMPATIBILITY.md  DECORATORS.md  EXAMPLES_CATALOG.md  EXPECT_SEQUENCES.md  EXTENDING_ADAPTERS.md  FRAMEWORK_COMPATIBILITY.md  IMPLEMENTATION_GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LONG_RUNNING_AGENTS.md  MIGRATION_GUIDE.md  MULTIMODAL_OUTPUTS.md  PRODUCTION_READY_COMPLETE.md  PRODUCTION_READY_SUMMARY.md  QUICKSTART_ADAPTERS.md  README.md  REFACTORING_GUIDE.md  TELEMETRY_LOGGING.md  WEBSITE_DEPLOYMENT.md  getting-started.md  index.md  quick-start.md  requirements.txt
examples/: ALL_EXAMPLES.md  CHANGELOG.md  GETTING_STARTED.md  IMPROVEMENTS.md  INDEX.md  OVERVIEW.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  TROUBLESHOOTING.md  agent_config.toml  config_driven_agent.py  database_agent.py  durable_execution.py  file_summariser.py  file_summariser_agnostic.py  graph_agents_orchestration.py  hello_world.py  hello_world_agnostic.py  multi_agent_hierarchy.py  multi_agent_mesh.py  new_api_examples.py  observability_metrics.py  production_json_logging.py  runtime_recursion_example.py  scheduled_agent_example.py  server_agent_example.py  simplified_agent_api.py  streamed_output_example.py  summariser_agent_logic.py
examples/adapters/: README.md  api_usage.py  basic_usage.py  config.json  config.yaml
examples/advanced/: long_running_data_processor.py  long_running_data_processor_fixed.py  recursive_agent.py  scheduled_agents.py  server_agent.py  structured_logging.py
examples/distributed/: README.md  rabbitmq_work_queue.py  redis_pubsub_agents.py
examples/frameworks/: README.md
examples/frameworks/crewai/: basic_crew.py
examples/frameworks/langchain/: basic_agent.py  rag_agent.py
examples/scenarios/: README.md
examples/scenarios/api_integration/: rest_api_agent.py
examples/scenarios/code_generation/: generate_and_test.py
examples/scenarios/data_analysis/: csv_analysis.py
examples/scenarios/web_scraping/: scrape_and_analyze.py
isolated_agents_sdk/: __init__.py  __main__.py  agent.py  agent_runner.py  audit_logger.py  cli.py  composability.py  config.py  container_provisioner.py  decorators.py  exceptions.py  logging.py  models.py  output_collector.py  policy_validator.py  runtime.py  scheduler.py  session_manager.py  sub_agent_client.py
isolated_agents_sdk/adapters/: __init__.py  base.py  config.py  exceptions.py  factory.py  registry.py
isolated_agents_sdk/adapters/audit/: __init__.py  base.py  composite.py  file.py  stderr.py  telemetry.py  types.py
isolated_agents_sdk/adapters/container/: __init__.py  base.py  docker.py  kubernetes.py  podman.py  types.py
isolated_agents_sdk/adapters/database/: base.py  nosql.py  sql.py  vector.py
isolated_agents_sdk/adapters/policy/: __init__.py  base.py  default.py  types.py
isolated_agents_sdk/adapters/storage/: __init__.py  base.py  local.py  types.py
output/: summary.md
site/: 404.html  index.html  requirements.txt  sitemap.xml
site/ADAPTER_ARCHITECTURE/: index.html
site/ADAPTER_PATTERN_SUMMARY/: index.html
site/AGENT_COMMUNICATION/: index.html
site/API_ADAPTER_SUPPORT/: index.html
site/ARCHITECTURE_DIAGRAM/: index.html
site/AUTOMATIC_INSTALLATION/: index.html
site/COMPLETE_IMPLEMENTATION_GUIDE/: index.html
site/COMPOSABILITY/: index.html
site/CROSSPLATFORM_COMPATIBILITY/: index.html
site/DECORATORS/: index.html
site/EXAMPLES_CATALOG/: index.html
site/EXPECT_SEQUENCES/: index.html
site/EXTENDING_ADAPTERS/: index.html
site/FRAMEWORK_COMPATIBILITY/: index.html
site/IMPLEMENTATION_GAP_ANALYSIS/: index.html
site/IMPLEMENTATION_PLAN/: index.html
site/IMPLEMENTATION_STATUS/: index.html
site/LONG_RUNNING_AGENTS/: index.html
site/MIGRATION_GUIDE/: index.html
site/MULTIMODAL_OUTPUTS/: index.html
site/PRODUCTION_READY_COMPLETE/: index.html
site/PRODUCTION_READY_SUMMARY/: index.html
site/QUICKSTART_ADAPTERS/: index.html
site/REFACTORING_GUIDE/: index.html
site/TELEMETRY_LOGGING/: index.html
site/WEBSITE_DEPLOYMENT/: index.html
site/getting-started/: index.html
site/quick-start/: index.html
site/search/: search_index.json
tests/integration/: README.md  __init__.py  conftest.py  test_adapter_integration.py
tests/property/: conftest.py  test_audit_properties.py  test_output_properties.py  test_policy_properties.py  test_provisioner_properties.py  test_serialisation_properties.py  test_session_properties.py
tests/unit/: test_advanced_features.py  test_agent.py  test_agent_runner.py  test_audit_logger.py  test_config.py  test_container_provisioner.py  test_output_collector.py  test_pipeline_integration.py  test_policy_validator.py  test_polyglot_interactive.py  test_session_manager.py
workspace/: large_dataset.csv
workspace/documents/: sample1.txt  sample2.txt
