[project]
name = "isolated-agents-sdk"
version = "0.2.0"
description = "Wrap any AI agent in a rootless Podman container for automatic isolation."
requires-python = ">=3.11"
dependencies = [
    "cloudpickle>=3.0",
    "jsonschema>=4.20",
    "colorlog>=6.8.0",
    "flask[examples]>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-asyncio>=0.23",
]
examples = [
    "langchain>=0.3",
    "langchain-groq>=0.2",
    "python-dotenv>=1.0",
    "pandas",
    "numpy",
    "redis",
    "pika",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isolated_agents_sdk"]

[project.scripts]
isolated-agents = "isolated_agents_sdk.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-asyncio>=0.23",
]
