[project]
name = "isolated-agents-sdk"
version = "0.2.1"
description = "Wrap any AI agent in a rootless Podman, Docker, or Kubernetes container for automatic isolation."
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Veldrine Evelia Kaharwa", email = "eveliaveldrine@gmail.com" },
]
keywords = ["agents", "sandbox", "podman", "docker", "kubernetes", "isolation", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Security",
]
dependencies = [
    "cloudpickle>=3.0",
    "jsonschema>=4.20",
    "colorlog>=6.8.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/Tech-Vexy/Isolated-Agents"
Repository = "https://github.com/Tech-Vexy/Isolated-Agents"
Issues = "https://github.com/Tech-Vexy/Isolated-Agents/issues"

[project.optional-dependencies]
examples = [
    "flask>=3.1",
    "langchain>=0.3",
    "langchain-groq>=0.2",
    "python-dotenv>=1.0",
    "pandas",
    "numpy",
    "redis",
    "pika",
]

[project.scripts]
isolated-agents = "isolated_agents_sdk.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isolated_agents_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    ".venv",
    ".local",
    "workspace",
    "site",
    "dist",
    "examples/.local",
    "examples/.cache",
]

[tool.ruff.lint]
# Conservative baseline: catch real bugs (pyflakes F-rules) without
# failing on the project's existing style/whitespace debt. Tighten by
# adding E, W, I, B, UP, SIM categories once the codebase is cleaned up.
select = [
    "F",     # pyflakes — undefined names, unused imports, syntax issues
    "E711",  # comparison to None
    "E712",  # comparison to True/False
    "E713",  # not-in test
    "E714",  # not-is test
    "E721",  # type-comparison
    "E722",  # bare except
]
ignore = [
    "F401",  # unused imports — many intentional re-exports in __init__ files
    "F841",  # unused local variable — sometimes kept for debugging
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F811"]  # pytest fixture name reuse
"examples/**" = ["F401"]  # example imports may be illustrative
