[project]
name = "isolated-agents-sdk"
version = "0.2.1"
description = "Wrap any AI agent in a rootless Podman, Docker, or Kubernetes container for automatic isolation."
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Veldrine Evelia Kaharwa", email = "eveliaveldrine@gmail.com" },
]
keywords = ["agents", "sandbox", "podman", "docker", "kubernetes", "isolation", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Security",
]
dependencies = [
    "cloudpickle>=3.0",
    "jsonschema>=4.20",
    "loguru>=0.7",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/Tech-Vexy/Isolated-Agents"
Repository = "https://github.com/Tech-Vexy/Isolated-Agents"
Issues = "https://github.com/Tech-Vexy/Isolated-Agents/issues"

[project.optional-dependencies]
examples = [
    "flask>=3.1",
    "langchain>=0.3",
    "langchain-groq>=0.2",
    "python-dotenv>=1.0",
    "pandas",
    "numpy",
    "redis",
    "pika",
]
config = [
    "pyyaml>=6.0",
    "tomli-w>=1.0",
]

[project.scripts]
isolated-agents = "isolated_agents_sdk.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isolated_agents_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a real container runtime (podman/docker). Deselect with -m 'not integration'.",
    "slow: tests that take more than a few seconds.",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    ".venv",
    ".local",
    "workspace",
    "site",
    "dist",
    "examples/.local",
    "examples/.cache",
]

[tool.ruff.lint]
# Tightened linting rules
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = [
    "F401",  # unused imports — many intentional re-exports in __init__ files
    "F841",  # unused local variable — sometimes kept for debugging
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F811"]  # pytest fixture name reuse
"examples/**" = ["F401"]  # example imports may be illustrative
